-Electrics are now much more durable in combat
-Fixed diesels losing torque faster than petrols when taking damage
-Fixed HE detonating inside bounding box of a prop being automatic hit (unrelated to HE bug)
-Fixed crate weight not updating if new ammo setup is lighter
-Fixed typo in e2 func acfFuelUse() that caused it to always return 0

*r542
-Fixed some effect errors, courtesy of Python1320
-Fixed issue with unitialized var in guns

*r543
-Added EA2 acf component, courtesy of FreeFry
-Added ability for rounds to ricochet off brushwork/displacements
-Updated tracer effect
-Renamed "Any" fueltype to "Multifuel"
-Fixed bug with parented mass lookup that caused massive lag on high rof weapons
-Fixed bug with parented weapons applying too much force

*r544
-New engines and minor balancing by RedReaper
--Added tiny electric and 2 multifuel boxers
--Minor buffs to 5.0L B6, 4.5L V8
--Minor nerfs to 4.3L V10, 8L V10, 22L V10
--Adjusted 3L V12 flywheel inertia
--Jerry can is now linkable
--Added more fuel tank descriptions
-Fixed issue caused by setparent function override, courtesy of thegrb93

*r545
-Fixed 2.4 B4 using wrong size model
-Slight buff to 2.1L B4, 2.4L B4, 3.6L V6
-Reduced turbine fuel use ~20%
-HE damage normalized a bit on large props
-Added distance feathering to HE damage
-Overall HE damage reduced
-Increased HEAT ammo/fuel damage multiplier 20%

*r546
-Reduced prop health by 33%
-Reduced HE damage nerf
-HEAT pen buffed 20%
-Clamped HEAT penetrator travel distance
-GL now has 6 round clip with 2.5s reload
-60mm mortar rate of fire lowered
-Improved handling of shells re-entering through skybox
-Separated SL spawn limit from guns (max 10)
-Applied sitting infobubble hide to ammo/engine/gearbox/fuel
-Fixed cannon rifling texture and m36 muzzle brake
-Updated HMG model with 2 new bodies (mg-ff and mg151)
-Updated SA model (better scale & proportions, side mag bodygroup)
-Removed some unused models